--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Normalize CSS -->
-  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="css/normalize.css">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/styles.css">
@@ -28,7 +28,7 @@
 <body>
   <article class="card">
     <header class="card__header">
-      <img src="/images/image-victor.jpg" alt="Image Victor Crest" class="card__image">
+      <img src="images/image-victor.jpg" alt="Image Victor Crest" class="card__image">
     </header>
     <section class="card__body">
       <p class="card__name">Victor Crest <span class="card__age">26</span></p>
